syntax = "proto2";

package addrman;

message AddrmanEvent {
  oneof event {
    InsertNew new = 1;
    InsertTried tried = 2;
  }
}

// An attempted insert into the addrman new table.
message InsertNew {
  required bool     inserted              = 1;  // If the addr was actually inserted.
  required int32    bucket                = 2;  // The bucket the address was inserted into.
  required int32    bucket_pos            = 3;  // The position in the bucket the address was inserted into.
  required string   addr                  = 4;  // Address that was inserted.
  required uint32   addr_AS               = 5;  // The mapped AS of the inserted address.
  required string   source                = 6;  // Source of the address that was inserted.
  required uint32   source_AS             = 7;  // The mapped AS of the source of the inserted address.
}

// An insert into the addrman tried table.
message InsertTried {
  required int32    bucket                = 1;  // The bucket the address was inserted into.
  required int32    bucket_pos            = 2;  // The position in the bucket the address was inserted into.
  required string   addr                  = 3;  // Address that was inserted.
  required uint32   addr_AS               = 4;  // The mapped AS of the inserted address.
  required string   source                = 5;  // Source of the address that was inserted.
  required uint32   source_AS             = 6;  // The mapped AS of the source of the inserted address.
}
