syntax = "proto2";

package log_extractor;

message LogEvent {
  required uint64 timestamp = 1;
  required string category = 2; // e.g., "validation", "net", etc.
  oneof event {
    UnknownLogMessage unknown_log_message = 3;
    BlockConnectedLog block_connected_log = 4;
  }
}

// A log message that does not match any known format.
message UnknownLogMessage {
  required string raw_message = 1; // Raw log message.
}

// 2025-09-27T01:52:01Z [validation] Enqueuing BlockConnected: block hash=41109f31c8ca4d8683ab5571ba462292ddb8486dee6ecd2e62901accc7952f0b block height=437
message BlockConnectedLog {
  required string block_hash = 1;
  required uint32 block_height = 2;
}
